trunk/Archive2/2d/416f9e42e1ad40/output
main.cpp: In function 'int main()':
main.cpp:11:25: error: could not convert 'ints<0, 1, 2, 3>()' from 'ints<0, 1, 2, 3>' to 'ints<0>'
     f(ints<0, 1, 2, 3>());
                         ^
